turtleart.flower.Flower.scala.error
Compilation error:
Flower:22: error: '<-' expected but ')' found.
  for (i>- 0 to 3){
                 ^Flower:26: error: illegal start of simple expression
} 
^