turtleart.flower.Flower.scala.code
override def run() {
  for (i<- 0 to 7){
    avance(50)
    droite(45)
  }
  avance(25)
  droite(45)
  
  for (i<- 0 to 7){
    carre()
    droite(45)
    avance(25)
    gauche(45)
    avance(25)
    droite(45)
  }
  
}


def carre(){
  for (i>- 0 to 3){
    avance(25)
    droite(45)
  }
}